completed responsive design

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -11,7 +11,7 @@
 >
 <h1 style="text-align: center; margin-top: 10px">Sign up</h1>
 
-  <form style="width: 500px">
+  <form style="width: 80%">
     <!-- Email input -->
     <div data-mdb-input-init class="form-outline mb-4">
       <label class="form-label" for="form2Example1">Email address</label>
