--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,7 +12,7 @@
   "
 >
 <h1 style="text-align: center; margin-top: 10px">Login</h1>
-  <form style="width: 500px">
+  <form style="width: 80%  ">
     <!-- Email input -->
     <div data-mdb-input-init class="form-outline mb-4">
       <label class="form-label" for="form2Example1">Email address</label>
