--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     justify-content: center;
   "
 >
-  <div style="display: flex; justify-content: center; align-items: center">
+  <div style="display: flex; justify-content: center; align-items: center;padding: 20px;">
     <h1>Bringing the Best to Your Doorstep</h1>
     <img src="https://svgsilh.com/svg/151685.svg" height="200" alt="" />
   </div>
